+ Added a new Item:   the Portable Crafter: take a crafting table wherever you want.
- Fixed so many bugs I forgot almost all of them